--- a/server/views/layouts/master.jade
+++ b/server/views/layouts/master.jade
@@ -4,9 +4,12 @@ html(lang='en')
     meta(charset='utf-8')
     title Hapi Prototype
     link(rel='stylesheet', href='/style.css')
+    link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/vendor/components-font-awesome/css/font-awesome.css')
+    link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
   body
-    h1 Hapi Prototype
     include ../partials/nav
-    block content
+    .container
+      block content
     script(src='/vendor/jquery/dist/jquery.js')
     script(src='/vendor/lodash/lodash.js')
