--- a/server/views/partials/nav.jade
+++ b/server/views/partials/nav.jade
@@ -1,3 +1,14 @@
-nav
-  ul
-    li: a(href='/') Home
+nav.navbar.navbar-default
+    .container
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#'): strong resQ
+        .navbar-right
+          ul.nav.navbar-nav
+            li.active: a(href='/') Home
+            li: a(href='/faq') FAQ
+            li: a(href='/contact') Contact Us
