Create, view and edit Animals

--- a/client/style.less
+++ b/client/style.less
@@ -1,4 +1,30 @@
 body {
+  font-family: 'Open Sans', sans-serif !important;
   color: #00000 !important;
-  background: #eaeaea !important;  
+  background: #eaeaea !important;
+}
+
+.outer {
+  margin-top: 30px;
+  .animal {
+    background-color: #ffffff;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    border-radius: 5px;
+    border: 1px solid #e5e5e5;
+    .photo {
+      background-size: cover;
+      padding: 100px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+    }
+    .info {
+      h4 {
+        font-weight: 700;
+      }
+      h5 {
+        color: #8b8b8b;
+      }
+    }
+  }
 }
