--- a/server/views/layouts/master.jade
+++ b/server/views/layouts/master.jade
@@ -2,14 +2,25 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
-    title Hapi Prototype
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    title resQ | Animal Shelter
     link(rel='stylesheet', href='/style.css')
     link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/components-font-awesome/css/font-awesome.css')
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
+    link(href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400', rel='stylesheet', type='text/css')
+    
+    //if lt IE 9
+      script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+      script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+      
   body
     include ../partials/nav
     .container
-      block content
+      .row
+        block content
+        
     script(src='/vendor/jquery/dist/jquery.js')
     script(src='/vendor/lodash/lodash.js')
+    script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
