--- a/server/views/partials/nav.jade
+++ b/server/views/partials/nav.jade
@@ -1,14 +1,16 @@
 nav.navbar.navbar-default
-    .container
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#'): strong resQ
-        .navbar-right
-          ul.nav.navbar-nav
-            li.active: a(href='/') Home
-            li: a(href='/faq') FAQ
-            li: a(href='/contact') Contact Us
+  .container
+    .navbar-header
+      button.navbar-toggle.collapsed(data-toggle='collapse', data-target='#navbar')
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='/'): i.fa.fa-paw
+    #navbar.collapse.navbar-collapse.navbar-right
+      ul.nav.navbar-nav
+        li(class=active(path, '/')): a(href='/') Home
+        li(class=active(path, '/animals')): a(href='/animals') Animals
+        li(class=active(path, '/clients')): a(href='/clients') Clients
+        li(class=active(path, '/faq')): a(href='/faq') FAQ
+        li(class=active(path, '/contact')): a(href='/contact') Contact Us
