--- a/server/views/templates/animals/index.jade
+++ b/server/views/templates/animals/index.jade
@@ -1,6 +1,6 @@
 extends ../../layouts/master
 block content
-  a(href='/animals/new').btn.btn-default: i.fa.fa-plus-square-o &nbsp; Create New
+  a(href='/animals/new').btn.btn-default: i.fa.fa-plus-square-o &nbsp; New Animal
   
   .row 
     each animal in animals
