--- a/client/style.less
+++ b/client/style.less
@@ -6,7 +6,7 @@ body {
 
 .outer {
   margin-top: 30px;
-  .animal {
+  .animal, .client {
     background-color: #ffffff;
     padding-left: 0px !important;
     padding-right: 0px !important;
