--- a/server/views/layouts/master.jade
+++ b/server/views/layouts/master.jade
@@ -6,7 +6,8 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title resQ | Animal Shelter
     link(rel='stylesheet', href='/style.css')
-    link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
+    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/lumen/bootstrap.min.css", rel="stylesheet")
+    //- link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/components-font-awesome/css/font-awesome.css')
     link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:700,300,600,800,400', rel='stylesheet', type='text/css')
