--- a/server/views/templates/animals/index.jade
+++ b/server/views/templates/animals/index.jade
@@ -1,13 +1,17 @@
 extends ../../layouts/master
-block content
-  a(href='/animals/new').btn.btn-default: i.fa.fa-plus-square-o &nbsp; New Animal
-  
-  .row 
-    each animal in animals
-      .outer.col-md-3
-        .animal.col-md-12: a(href='/animals/#{animal._id}')
-          .photo.col-md-12(style='background-image: url(#{animal.photo});')
-          .info.col-md-12
-            h4= animal.name + ', ' + animal.age
-            - var gender = _.capitalize(animal.gender);
-            h5= gender + ' - ' + animal.species + '/' + animal.breed
+block content 
+  .container(style='padding-top: 75px;')
+    .row
+      .col-md-12
+        a(href='/animals/new').btn.btn-primary: i.fa.fa-plus-square-o &nbsp; New Animal
+      
+  .container
+    .row 
+      each animal in animals
+        .outer.col-md-3
+          .animal.col-md-12: a(href='/animals/#{animal._id}')
+            .photo.col-md-12(style='background-image: url(#{animal.photo});')
+            .info.col-md-12
+              h4= animal.name + ', ' + animal.age
+              - var gender = _.capitalize(animal.gender);
+              h5= gender + ' - ' + animal.species + '/' + animal.breed
