--- a/client/style.less
+++ b/client/style.less
@@ -143,13 +143,13 @@ Image credits: unsplash.com
   background-repeat: no-repeat;
 }
 .fade-carousel .slides .slide-1 {
-  background-image: url(http://images5.alphacoders.com/404/404607.jpg);
+  background-image: url(/dog.jpg);
 }
 .fade-carousel .slides .slide-2 {
-  background-image: url(http://walldiskpaper.com/wp-content/uploads/2015/01/Cat-Wallpaper-Iphone-HD-Free.jpg);
+  background-image: url(/cat.jpg);
 }
 .fade-carousel .slides .slide-3 {
-  background-image: url("http://hdwallpapers.cat/wallpaper/game_of_thrones-drogon's_fire_breath_dragon_hd-wallpaper-1176593.jpg");
+  background-image: url(/dragon.jpg);
 }
 
 /********************************/
