--- a/server/views/templates/clients/edit.jade
+++ b/server/views/templates/clients/edit.jade
@@ -4,7 +4,7 @@ block content
     .row
       h3= 'Edit ' + client.name
       .col-md-12(style='margin-top: 30px;')
-        form(method='post', action='/clients/#{client._id}/edit')
+        form(method='post', action='/clients/#{client._id}')
           .form-group
             label(for='name') Name
             input#name.form-control(type='text', name='name', placeholder='Enter a full name', autofocus=true, value=client.name)
@@ -25,10 +25,10 @@ block content
             .checkbox-gender
               label(for='gender') Gender: &nbsp;
               label.radio-inline
-                input#male(type='radio', name='gender', value='male')
+                input#male(type='radio', name='gender', value='male', checked=client.gender === 'male')
                 span Male
               label.radio-inline
-                input#female(type='radio', name='gender', value='female')
+                input#female(type='radio', name='gender', value='female', checked=client.gender === 'female')
                 span Female
             
           button.btn.btn-default(type='submit') Edit Client
