--- a/server/views/templates/animals/show.jade
+++ b/server/views/templates/animals/show.jade
@@ -6,7 +6,14 @@ block content
         form(method='post', action='/animals/#{animal._id}/delete')
           button.btn.btn-danger.btn-sm(type='submit'): i.fa.fa-trash-o
           a.btn.btn-default.btn-sm(href='/animals/#{animal._id}/edit'): i.fa.fa-pencil
-    
+          
+  .container
+    .row
+      form(method='post', action='/animals/#{animal._id}/adopt')
+        select(name='clientId')
+          each client in clients
+            option(value=client._id)= client.name
+        button.btn.btn-default.btn-sm(type='submit') Adopt
   .container
     .row
       .outer.col-md-3
