--- a/server/views/templates/clients/index.jade
+++ b/server/views/templates/clients/index.jade
@@ -3,7 +3,7 @@ block content
   .container(style='padding-top: 75px;')
     .row
       .col-md-12
-        a(href='/clients/new').btn.btn-primary: i.fa.fa-plus-square-o &nbsp; New Client
+        a(href='/clients/new').btn.btn-primary.btn-sm: i.fa.fa-plus-square-o &nbsp; New Client
         
   .container
     .row 
