Style all pages

--- a/client/style.less
+++ b/client/style.less
@@ -29,9 +29,16 @@ body {
   }
 }
 
+.show-client {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid #e5e5e5;
+}
+
 /*
 Fade content bs-carousel with hero headers
-Code snippet by maridlcrmn (Follow me on Twitter @maridlcrmn) for Bootsnipp.com
+Code snipanimal by maridlcrmn (Follow me on Twitter @maridlcrmn) for Bootsnipp.com
 Image credits: unsplash.com
 */
 
