--- a/server/views/templates/animals/index.jade
+++ b/server/views/templates/animals/index.jade
@@ -3,22 +3,18 @@ block content
   .container(style='padding-top: 75px;')
     .row
       .col-md-1
-        a.btn.btn-primary.btn-sm(href='/animals/new'): i.fa.fa-plus-square-o &nbsp; New Animal
+        a.btn.btn-primary.btn-sm(href='/animals/new'): i.fa.fa-plus-square-o &nbsp; New animal
       .col-md-11.text-right
         #filter
           form.form-inline(method='get', action='/animals')
-            label Min Age
-            input.form-control(type='number', name='min', style='width: 85px;')
-            label Max Age
-            input.form-control(type='number', name='max', style='width: 85px;')
-            label Gender
-            select.form-control(name='gender', style='width: 85px;')
-              option 
+            input.form-control.input-sm(type='number', name='min', style='width: 100px;', placeholder='Min Age')
+            input.form-control.input-sm(type='number', name='max', style='width: 100px;', placeholder='Max Age')
+            select.form-control.input-sm(name='gender', style='width: 130px;')
+              option(value='') Pick Gender
               option male
               option female
-            label Species
-            select.form-control(name='species', style='width: 100px;')
-              option 
+            select.form-control.input-sm(name='species', style='width: 130px;')
+              option(value='') Pick Species
               option Dog
               option Cat
               option Dragon
@@ -26,8 +22,7 @@ block content
               option Koala
               option Snake
               option Rabbit
-            label Breed
-            input.form-control(type='text', name='breed', style='width: 85px;')
+            input.form-control.input-sm(type='text', name='breed', style='width: 100px;', placeholder='Breed')
             button.btn.btn-info.btn-sm(type='submit'): i.fa.fa-filter
             a.btn.btn-default.btn-sm(href='/animals'): i.fa.fa-refresh
       
