--- a/server/views/templates/clients/new.jade
+++ b/server/views/templates/clients/new.jade
@@ -1,10 +1,15 @@
 extends ../../layouts/master
 block content
-  
   .container(style='padding-top: 75px;')
     .row 
-      h3 New Clients
-      .col-md-12(style='padding-top: 30px;')
+      .col-md-12
+        a.btn.btn-default.btn-sm(href='/clients'): i.fa.fa-chevron-left
+
+  .container
+    .row 
+      .col-md-12
+        h3 New Client
+      .col-md-12
         form(method='post', action='/clients')
           .form-group
             label(for='name') Name
